<resources>
    <string name="app_name">AndroQuiz</string>
    <string name="title_activity_topics">Topics</string>
    <string name="xml_version_quot_a_0_quot"><![CDATA[<xml version=\"A.0\"/>]]></string>
    <string name="xml_version_quot_a_0_quot1"><![CDATA[<?xml version=\"A.0\"?>]]></string>
    <string name="xml_version_quot_a_0_quot2"><![CDATA[<?xml version=\"A.0\"/>]]></string>
    <string name="andro_quiz">ANDRO QUIZ</string>
    <string name="topic">TOPIC</string>
    <string name="choose">CHOOSE</string>
    <string name="java">Java</string>
    <string name="layout">Layout</string>
    <string name="start">START</string>
    <string name="android_image">Android Image</string>
    <string name="android">Android</string>
    <string name="misc">Misc</string>
    <string name="java_quiz">Java Quiz</string>
    <string name="javaQ1">Q1. Select the method used to access a view element of a layout resource in an activity.</string>
    <string name="findviewbyid">findViewById()</string>
    <string name="oncreate">onCreate()</string>
    <string name="setcontentview">setContentView()</string>
    <string name="javaQ2">Q2. What is the name of the class which is inherited to create a user interface screen?</string>
    <string name="viewgroup">ViewGroup</string>
    <string name="view">View</string>
    <string name="activity">Activity</string>

    <string name="q3_java">Q3. You can shutdown an activity by calling _______________ method.</string>

    <string name="finishactivity">finishActivity</string>
    <string name="finish">finish</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="q4_java">Q4. Which of the following should be used to save the unsaved data and release resources being used by an Android application?</string>
    <string name="activity_onstop">Activity.onStop()</string>
    <string name="activity_onpause">Activity.onPause()</string>
    <string name="activity_ondestroy">Activity.onDestroy()</string>
    <string name="activity_onshutdown">Activity.onShutdown()</string>
    <string name="q5_java">Q5.Which of the following is/are appropriate for saving the state of an Android application?</string>
    <string name="activity_onfreeze">Activity.onFreeze()</string>
    <string name="submit">SUBMIT</string>
    <string name="xml_quiz">XML Quiz</string>
    <string name="xml_q1">Q1. What does XML stand for</string>
    <string name="extra_modern_link">eXtra Modern Link</string>
    <string name="extensible_markup_language">eXtensible Markup Language</string>
    <string name="example_markup_language">Example Markup Language</string>
    <string name="x_markup_language">X- Markup Language</string>
    <string name="xml_q2">Q2. What is the correct syntax of the declaration which defines XML versions?</string>
    <string name="q3_xml_uses_features_of">Q3. XML uses features of ?</string>
    <string name="html">HTML</string>
    <string name="xhtml">XHTML</string>
    <string name="vml">VML</string>
    <string name="sgml">SGML</string>
    <string name="flexible_infromation_storage_unit">flexible infromation storage unit</string>
    <string name="simple_information">simple information</string>
    <string name="logic_information">logic information</string>
    <string name="classabc">class</string>
    <string name="both_a_and_b">Both A and B</string>
    <string name="layout_quiz">Layout Quiz</string>
    <string name="layout_file">Layout file</string>
    <string name="manifest_file">Manifest file</string>
    <string name="r_file">R file</string>
    <string name="q2_layout">Q2.Which of the following are UI elements that you can use in a window in an Android application?</string>
    <string name="textbox">TextBox</string>
    <string name="textview">TextView</string>
    <string name="edittext">EditText</string>
    <string name="both_b_and_c">Both b and c</string>
    <string name="q3_layout">A single screen the user sees on the device at one time</string>
    <string name="option">A message sent among the major building blocks</string>
    <string name="option2">A component that runs in the background without any interface</string>
    <string name="option4">Context referring to the application environment</string>
    <string name="vieww">view</string>
    <string name="intent">intent</string>
    <string name="fragment">Fragment</string>
    <string name="layout_q5">Q5. Android component that manages appearance and format on screen is called</string>
    <string name="op4">The code which is compiled to run the app</string>
    <string name="op33">The strings used in the app</string>
    <string name="op2">The permissions required by the app</string>
    <string name="op1">Orientations and layouts that specify what the display looks like</string>
    <string name="q3_what_is_an_activity">Q3. What is an Activity?</string>
    <string name="android_misc">Android Misc...</string>
    <string name="misc_q1">Q1. Which piece of code used in android is not open source ?</string>
    <string name="keypad">Keypad</string>
    <string name="shared_preferences">Shared preferences</string>
    <string name="content_provider">Content provider</string>
    <string name="sqlite">SQLite</string>
    <string name="opengl">OpenGL</string>
    <string name="q5_misc">Q5 What file is responsible for glueing everything together, explaining what are the application consists of, what are the main builind blocks etc.?</string>
    <string name="strings_xml">Strings XML</string>
    <string name="wifi_driver">WiFI? Driver</string>
    <string name="power_management">Power Management</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="misc_q2">Q2.If you want to share the data across hte al applications ,you should go for?</string>
    <string name="internal_storage">Internal storage</string>
    <string name="sqlite_databases">SQLite Databases</string>
    <string name="misc_q3">When the activity is not in focus, but still visible on the screen it is in?</string>
    <string name="running_state">running state</string>
    <string name="stopped_state">stopped state</string>
    <string name="paused_state">paused state</string>
    <string name="destroyed_state">destroyed state</string>
    <string name="misc_q5">Q.4 Which among these are NOT a part of Android\'s native libraries?</string>
    <string name="webkit">Webkit</string>
    <string name="dalvik">Dalvik</string>
    <string name="components">What are the main components in Android??</string>
    <string name="view2">________ is the basic building element of android\'s user interface.</string>
    <string name="textcolor">textColor</string>
    <string name="layout_height">layout_height</string>
    <string name="layout_marginstart">layout_marginStart</string>
    <string name="layout_width">layout_width</string>
    <string name="q1_select_a_mandatory_attribute_for_any_view_inside_of_a_container_layout">Q1. Select a mandatory attribute for any view inside of a container layout</string>
    <string name="exhndl">Which of the following is used for exception handling in java?</string>
    <string name="catchtrt">catch</string>
    <string name="trytrt">try</string>
    <string name="finalize">finalize()</string>
    <string name="ondestroy">onDestroy()</string>
    <string name="ui">is the basic building block of user interface in android</string>
    <string name="activityhg">Activity</string>
    <string name="services">Services</string>
    <string name="swing">Swing</string>
    <string name="awt">awt</string>
    <string name="atr">________ attribute is used to specify how to place the content of an object, both on x-axis and y-axis within object itself</string>
    <string name="xml">XML</string>
    <string name="q4re">Q.4 Which language is case sensitive?</string>
    <string name="none_of_these">None of these</string>
    <string name="swinger">Swinger</string>
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">Checkbox</string>
    <string name="ques">Q3. Which of the following attributes are used in XML</string>
    <string name="totalScore">TOTAL SCORE</string>
    <string name="yourSocre">Your Score is</string>
    <string name="gr">gravity</string>
</resources>
