<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.androquiz.Android_general">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundbb"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/android_misc"
            android:textSize="@dimen/TextSizeMedium"
            android:textColor="@color/white"
            android:fontFamily="@font/jokerman"
            />
        <android.support.v7.widget.CardView
            android:layout_width="@dimen/MarginTopLArge"
            android:layout_height="@dimen/imageHeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/CardMarginTop"
            app:cardCornerRadius="@dimen/cornerRadius"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/group1rect"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/HeadingPaddingTop"
                android:textSize="@dimen/TextSizesmall"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/HeadingPaddingTop"
                android:text="@string/misc_q1"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="65dp"
                    android:text="@string/keypad"
                    android:textColor="@color/white"
                    android:paddingStart="@dimen/fab_margin"
                    />
                <RadioButton
                    android:id="@+id/q1o2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/white"
                    android:text="@string/wifi_driver"
                    android:paddingStart="@dimen/fab_margin"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/white"
                    android:text="@string/power_management"
                    android:paddingStart="@dimen/fab_margin"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/white"
                    android:text="@string/audio_driver"
                    android:paddingStart="@dimen/fab_margin"
                    />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/MarginTopLArge"
            android:layout_height="@dimen/imageHeight"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/mmtop"
            app:cardCornerRadius="@dimen/cornerRadius"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/group2rect"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/HeadingPaddingTop"
                android:textSize="@dimen/TextSizesmall"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/HeadingPaddingTop"
                android:text="@string/misc_q2"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="@dimen/sixty_five"
                    android:textColor="@color/white"
                    android:text="@string/shared_preferences"
                    android:paddingStart="@dimen/fab_margin"
                    />
                <RadioButton
                    android:id="@+id/q2o2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/white"
                    android:text="@string/content_provider"
                    android:paddingStart="@dimen/fab_margin"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/white"
                    android:text="@string/internal_storage"
                    android:paddingLeft="@dimen/fab_margin"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="-10dp"
                    android:textColor="@color/white"
                    android:text="@string/sqlite_databases"
                    android:paddingLeft="@dimen/fab_margin"
                    />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/MarginTopLArge"
            android:layout_height="@dimen/imageHeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/Card_two_margin_top"
            app:cardCornerRadius="@dimen/cornerRadius"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/group3rect"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/HeadingPaddingTop"
                android:textSize="@dimen/TextSizesmall"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/HeadingPaddingTop"
                android:text="@string/misc_q3"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="63dp"
                    android:text="@string/running_state"
                    android:paddingStart="@dimen/fab_margin"
                    />
                <RadioButton
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="-8dp"
                    android:text="@string/stopped_state"
                    android:paddingStart="@dimen/fab_margin"
                    />
                <RadioButton
                    android:textColor="@color/white"
                    android:id="@+id/q3o3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="-8dp"
                    android:text="@string/paused_state"
                    android:paddingLeft="@dimen/fab_margin"
                    />
                <RadioButton
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="-8dp"
                    android:text="@string/destroyed_state"
                    android:paddingLeft="@dimen/fab_margin"
                    />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/MarginTopLArge"
            android:layout_height="@dimen/imageHeight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/mmm"
            app:cardCornerRadius="@dimen/cornerRadius"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/group4rect"
                />
            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/HeadingPaddingTop"
                android:textSize="@dimen/TextSizesmall"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/HeadingPaddingTop"
                android:text="@string/components"
                />

            <CheckBox
                android:id="@+id/q4o1"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="@dimen/HeadingPaddingTop"
                android:layout_marginTop="70dp"
                android:paddingStart="@dimen/fab_margin"
                android:text="@string/activityhg"
                android:textColor="@color/white" />
                <CheckBox
                    android:textColor="@color/white"
                    android:id="@+id/q4o2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="95dp"
                    android:text="@string/services"
                    android:paddingStart="@dimen/fab_margin"
                    />
                <CheckBox
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="120dp"
                    android:text="@string/swing"
                    android:paddingStart="@dimen/fab_margin"
                    />
                <CheckBox
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/HeadingPaddingTop"
                    android:layout_marginTop="145dp"
                    android:text="@string/awt"
                    android:paddingStart="@dimen/fab_margin"
                    />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/MarginTopLArge"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="875dp"
            app:cardCornerRadius="@dimen/cornerRadius"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/group5rect"
                />
            <EditText
                android:id="@+id/q5o4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/HeadingPaddingTop"
                android:textSize="@dimen/TextSizesmall"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/HeadingPaddingTop"
                android:inputType="text"
                android:ems="3"
                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="38dp"
                 android:textSize="@dimen/TextSizesmall"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:layout_marginStart="80dp"
                 android:text="@string/ui"
                  />

        </android.support.v7.widget.CardView>

        <Button
            android:paddingLeft="@dimen/marginTopHeading"
            android:paddingRight="@dimen/marginTopHeading"
            android:paddingTop="@dimen/imageMarginTop"
            android:paddingBottom="@dimen/imageMarginTop"
            android:id="@+id/submit_button"
            android:layout_width="@dimen/cardMarginTop"
            android:layout_height="@dimen/seventy"
            android:layout_marginTop="995dp"
            android:layout_marginBottom="@dimen/cornerRadius"
            android:layout_centerHorizontal="true"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:fontFamily="@font/jokerman"
            android:textStyle="normal"
            android:textSize="@dimen/TextSizeMedium"
            android:onClick="onSubmitThree"
            android:background="@drawable/group1"/>

    </RelativeLayout>


</ScrollView>

